# wlameshot

./: .gitignore  CLAUDE.md  CMakeLists.txt  INSTALL.md  LICENSE  README.md  build.sh
data/app/: org.wlameshot.Wlameshot.desktop
src/: capturewidget.cpp  capturewidget.h  main.cpp  screenshotgrabber.cpp  screenshotgrabber.h
